// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graph calcGraphOrder 1`] = `
Object {
  "max": 2,
  "med": 1.3333333333333333,
  "min": 1,
}
`;

exports[`Graph getLinksByIdentifier 1`] = `
Array [
  Object {
    "connections": Array [
      GraphNode {
        "attributes": Object {
          "lang": Array [
            "en",
            "pt",
          ],
        },
        "identifier": "ismelo",
        "removeAttribute": [Function],
      },
      GraphNode {
        "attributes": Object {
          "lang": Array [
            "en",
          ],
        },
        "identifier": "dart",
        "removeAttribute": [Function],
      },
    ],
    "identifier": "lang",
    "value": "en",
  },
]
`;

exports[`Graph getLinksByIdentifier 2`] = `
Array [
  Object {
    "connections": Array [
      GraphNode {
        "attributes": Object {
          "lang": Array [
            "en",
            "pt",
          ],
        },
        "identifier": "ismelo",
        "removeAttribute": [Function],
      },
      GraphNode {
        "attributes": Object {
          "lang": Array [
            "en",
          ],
        },
        "identifier": "dart",
        "removeAttribute": [Function],
      },
    ],
    "identifier": "lang",
    "value": "en",
  },
  Object {
    "connections": Array [
      GraphNode {
        "attributes": Object {
          "lang": Array [
            "en",
            "pt",
          ],
        },
        "identifier": "ismelo",
        "removeAttribute": [Function],
      },
      GraphNode {
        "attributes": Object {
          "lang": Array [
            "pt",
          ],
        },
        "identifier": "foo",
        "removeAttribute": [Function],
      },
    ],
    "identifier": "lang",
    "value": "pt",
  },
]
`;
